Uploaded New files
This is just a test ignore

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
 <body>
-  <h1>Andy</h1>
-  <p>Welcome to my website for Learning Git!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    
+<div id="body-container">
+    <div class="top-container">
+        <div class="top-container-left">
+            <h1>pines</h1>
+        </div>
+        <div class="top-container-right">
+            <p>Location: </p>
+            <p>home IP: </p>
+        </div>
+    </div>
 
+    <div class="display-containers">
+          <div class="container-left"></div>
+    <div class="container-mid"></div>
+    <div class="container-right">
+        
+    </div>
+    </div>
+  
+
+</div>
+
+<script src="script.js"></script>
+</body>
 </html>
